hphp/hack/test/ide_code_actions/quickfixes/missing_method/missing_method.php.exp
Code actions available:
------------------------------------------
Add stubs for missing interface methods (CodeActionKind: quickfix) SELECTED
Fix Hack error inline - This interface is not properly implemented (CodeActionKind: ) SELECTED
Fix Hack error inline - This interface is not properly implemented (CodeActionKind: ) SELECTED

Multiple code action titles match prefix: ''

Code action title: Add stubs for missing interface methods

JSON for selected code action:
------------------------------------------
{
  "diagnostics":[],
  "edit":{
    "changes":{
      "FILE.php":[
        {
          "newText":"\n  public function bar(): void {}\n\n  public function baz(): void {}\n",
          "range":{"end":{"character":0,"line":10},"start":{"character":0,"line":10}}
        }
      ]
    }
  },
  "kind":"quickfix",
  "title":"Add stubs for missing interface methods"
}

Applied edit for code action:
------------------------------------------
<?hh

interface IFoo {
  public function bar(): void;
  public function baz(): void;
}

class Foo implements IFoo {
                   // ^ at-caret
  public function otherMethod(): void {}

  public function bar(): void {}

  public function baz(): void {}
}


Code action title: Fix Hack error inline - This interface is not properly implemented

JSON for selected code action:
------------------------------------------
{
  "command":{
    "arguments":[
      {
        "entrypoint":"FixLintErrorCodeAction",
        "overrideSelection":{"end":{"character":25,"line":7},"start":{"character":21,"line":7}},
        "predefinedPrompt":{
          "command":"Fix Hack error inline",
          "description":"Fix Hack error inline",
          "displayPrompt":"Fix inline - This interface is not properly implemented",
          "model":"iCodeLlama 3.1 405B",
          "userPrompt":"\nGiven the following snippet of Hack code that is part of the file:\n 8 | class Foo implements IFoo {\n\n<DIAGNOSTIC>\nerror: Typing[4054] This interface is not properly implemented\n\nFile missing_method.php, line 8, character 22 - line 8, character 25:\n\n 3 | interface IFoo {\n 4 |   public function bar(): void;\n 5 |   public function baz(): void;\n 6 | }\n 7 | \n 8 | class Foo implements »IFoo« {\n 9 |                    // ^ at-caret\n10 |   public function otherMethod(): void {}\n11 | }\n\nMethod baz does not have an implementation\n\nFile missing_method.php, line 5, character 19 - line 5, character 21:\n\n 3 | interface IFoo {\n 4 |   public function bar(): void;\n 5 |   public function »baz«(): void;\n 6 | }\n 7 | \n 8 | class Foo implements IFoo {\n 9 |                    // ^ at-caret\n10 |   public function otherMethod(): void {}\n11 | }\n\n\n</DIAGNOSTIC>\nEdit <selection_to_edit> in a way that would fix that lint.\nIf there are multiple ways to fix this issue, please return in the code section the most strightforward one that is part of <selection_to_edit>,\nany further suggestions can be added in the explanation section.\n"
        },
        "webviewStartLine":7
      }
    ],
    "command":"code-compose.show-inline-chat",
    "title":"Fix Hack error inline - This interface is not properly implemented"
  },
  "data":{"isAI":true},
  "diagnostics":[],
  "edit":{"changes":{}},
  "kind":"",
  "title":"Fix Hack error inline - This interface is not properly implemented"
}

The code action edit was a no-op

Code action title: Fix Hack error inline - This interface is not properly implemented

JSON for selected code action:
------------------------------------------
{
  "command":{
    "arguments":[
      {
        "entrypoint":"FixLintErrorCodeAction",
        "overrideSelection":{"end":{"character":25,"line":7},"start":{"character":21,"line":7}},
        "predefinedPrompt":{
          "command":"Fix Hack error inline",
          "description":"Fix Hack error inline",
          "displayPrompt":"Fix inline - This interface is not properly implemented",
          "model":"iCodeLlama 3.1 405B",
          "userPrompt":"\nGiven the following snippet of Hack code that is part of the file:\n 8 | class Foo implements IFoo {\n\n<DIAGNOSTIC>\nerror: Typing[4054] This interface is not properly implemented\n\nFile missing_method.php, line 8, character 22 - line 8, character 25:\n\n 3 | interface IFoo {\n 4 |   public function bar(): void;\n 5 |   public function baz(): void;\n 6 | }\n 7 | \n 8 | class Foo implements »IFoo« {\n 9 |                    // ^ at-caret\n10 |   public function otherMethod(): void {}\n11 | }\n\nMethod baz does not have an implementation\n\nFile missing_method.php, line 5, character 19 - line 5, character 21:\n\n 3 | interface IFoo {\n 4 |   public function bar(): void;\n 5 |   public function »baz«(): void;\n 6 | }\n 7 | \n 8 | class Foo implements IFoo {\n 9 |                    // ^ at-caret\n10 |   public function otherMethod(): void {}\n11 | }\n\n\n</DIAGNOSTIC>\nEdit <selection_to_edit> in a way that would fix that lint.\nIf there are multiple ways to fix this issue, please return in the code section the most strightforward one that is part of <selection_to_edit>,\nany further suggestions can be added in the explanation section.\n"
        },
        "webviewStartLine":7
      }
    ],
    "command":"code-compose.show-inline-chat",
    "title":"Fix Hack error inline - This interface is not properly implemented"
  },
  "data":{"isAI":true},
  "diagnostics":[],
  "edit":{"changes":{}},
  "kind":"",
  "title":"Fix Hack error inline - This interface is not properly implemented"
}

The code action edit was a no-op
