hphp/hack/test/ide_code_actions/quickfixes/missing_method/missing_method.php
<?hh

interface IFoo {
  public function bar(): void;
  public function baz(): void;
}

class Foo implements IFoo {
                   // ^ at-caret
  public function otherMethod(): void {}
}
